--- a/templates/secret-login.html
+++ b/templates/secret-login.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('/static/assets/img/login-bg.jpg')">
+<header class="masthead" style="background-image: url('/static/assets/img/wf-bg-v4.png')">
   <div class="container text-center text-white">
     <h1 class="mt-5">Admin Login</h1>
   </div>
