--- a/templates/index.html
+++ b/templates/index.html
@@ -29,19 +29,19 @@
   <div class="row gx-4 gx-lg-5 justify-content-center">
     <div class="col-md-11 col-lg-9 col-xl-9">
 
-      <!-- 🔄 Dynamic Post List (ilk 10 sunucu tarafında) -->
+      <!-- Dynamic Post List -->
       <div id="post-list">
         {% include "partials/post-list.html" with context %}
       </div>
 
-      <!-- ➕ Add New Post Button (admin) -->
+      <!-- Add New Post Button (admin) -->
       {% if current_user.is_authenticated and current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
           <a class="btn btn-primary float-right" href="{{ url_for('add_new_post') }}">Create New Post</a>
         </div>
       {% endif %}
 
-      <!-- ⬇️ Load More (10’dan azsa gizli) -->
+      <!-- ⬇️ Load More  -->
       <div class="d-flex justify-content-center my-4">
         <button id="load-more" class="btn btn-outline-primary"
                 style="display: {{ 'inline-block' if initial_has_more else 'none' }};">
